# prefect-demo

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: build-image.yml  deploy.yml
src/deployments/test/: hello_world_deployment.py
src/flow/: f_01_quick_start.py  f_02_async_task.py  f_02_parallel.py  f_03_map.py  f_04_forloop_submit.py
src/flow/test/: hello_world_flow.py
src/flows/: f_01_quick_start_flow.py  f_02_async_task_flow.py  f_03_map_flow.py  f_04_forloop_submit_flow.py
src/flows/test/: hello_world_flow.py
